compat: support Paper and Folia version range